--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -59,11 +59,11 @@ android {
 //        }
 //    }
 
-    buildTypes {
-        release {
-            signingConfig signingConfigs.release
-        }
-    }
+    // buildTypes {
+    //     release {
+    //         signingConfig signingConfigs.release
+    //     }
+    // }
 }
 
 flutter {
